--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="CivicEconomicaLogo.png" alt="Civic Economica logo" class="site-logo" />
     <div class="title-tagline">
       <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters.</p>
+      <p class="tagline">What Happened. Why It Matters.Fortnightly.</p>
     </div>
   </div>
 
@@ -36,7 +36,7 @@
       <section class="intro">
         <h2>Welcome</h2>
         <p>
-          I'm Ellie, a student with a deep interest in Politics, Philosophy, and Economics (PPE), and a strong passion for international relations and current affairs. This site features my weekly, research-based articles exploring global political dynamics, economic policy, and the forces shaping societies today. Each piece is written to inform, challenge, and engage.
+          My name is Ellie and I am a year 13 student with a deep interest in Politics, Philosophy and Economics (PPE), and a strong passion for international relations and current affairs. This site features my fortnightly, research-based articles exploring global political dynamics, economic policy and the forces shaping societies today. Each piece is written to inform, challenge and engage.
         </p>
         <a class="cta-button" href="articles.html">Read the Latest Articles</a>
       </section>
@@ -107,4 +107,5 @@
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
 </body>
+
 </html>
