--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <img src="CivicEconomicaLogo.png" alt="Civic Economica logo" class="site-logo" />
     <div class="title-tagline">
       <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters.</p>
+      <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
     </div>
   </div>
     <nav>
@@ -35,12 +35,12 @@
     <section class="about">
       <h2>About Me</h2>
       <p>
-        Hello! I'm Ellie, an A-level student with a strong interest in economics, politics, and public policy. I created <strong>Civic Economica</strong> as a personal initiative to explore major political and economic issues through independent research and critical analysis.
+        Hello! My name is Ellie and I am a year 13 A-level student with a strong interest in economics, politics and public policy. I created <strong>Civic Economica</strong> as a personal initiative to explore major political and economic issues through independent research and critical analysis.
       </p>
 
       <h3>Why This Website?</h3>
       <p>
-       My goal is to publish one in-depth article each week on topics such as UK fiscal policy, global trade, social inequality, and current affairs. This platform allows me to develop my ideas, strengthen my writing, and build a portfolio for university applications, particularly for courses in Economics, PPE, and related disciplines.
+       My goal is to publish one in-depth article each week on topics such as UK fiscal policy, global trade, social inequality and current affairs. This platform allows me to develop my ideas, strengthen my writing, and build a portfolio for university applications, particularly for courses in Economics, PPE and related disciplines.
       </p>
 
       <h3>Academic Interests</h3>
@@ -53,7 +53,7 @@
 
       <h3>UCAS Profile</h3>
       <p>
-        I am applying to study PPE and Politics and International Relations at university. This blog forms part of my broader academic engagement, alongside wider reading, essay competitions, and participation in economics societies.
+        I am applying to study PPE and Politics and International Relations at university. This blog forms part of my broader academic engagement, alongside wider reading, essay competitions and participation in economics societies.
       </p>
 
       <p class="back-link"><a href="index.html">← Back to Home</a></p>
@@ -74,4 +74,5 @@
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
 </body>
+
 </html>
