--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <img src="CivicEconomicaLogo.png" alt="Civic Economica logo" class="site-logo" />
     <div class="title-tagline">
       <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters.</p>
+      <p class="tagline">What Happened. Why It Matters. Fortnightly</p>
     </div>
   </div>
     <nav>
@@ -84,4 +84,5 @@
     });
   </script>
 </body>
+
 </html>
