--- a/Right-wing_populism_rises_in_traditional_Labour_Areas_Amid_Economic_And_Cultural_Anxieties.html
+++ b/Right-wing_populism_rises_in_traditional_Labour_Areas_Amid_Economic_And_Cultural_Anxieties.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Civic Economica</h1>
-    <p class="tagline">Weekly Political & Economic Insights</p>
+    <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -89,4 +89,5 @@
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
 </body>
+
 </html>
