--- a/articles.html
+++ b/articles.html
@@ -12,7 +12,7 @@
     <img src="CivicEconomicaLogo.png" alt="Civic Economica logo" class="site-logo" />
     <div class="title-tagline">
       <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters.</p>
+      <p class="tagline">What Happened. Why It Matters. Fortnightly</p>
     </div>
   </div>
     <nav>
@@ -75,4 +75,5 @@
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
 </body>
+
 </html>
