--- a/articles.html
+++ b/articles.html
@@ -33,17 +33,16 @@
           <section class="highlight-article">
         <h3>All Articles</h3>
         <div class="article-card">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Official_portrait_of_Yuan_Yang_MP_crop_2.jpg/250px-Official_portrait_of_Yuan_Yang_MP_crop_2.jpg" alt="Official portrait of Yuan Yang MP" />
           <div class="article-content">
             <h4 class="article-title">
-              <a href="Right-wing_populism_rises_in_traditional_Labour_Areas_Amid_Economic_And_Cultural_Anxieties.html">
-                Right-wing populism rises in traditional Labour areas amid economic and cultural anxieties
+              <a href="The_Digital_Border_Within.html">
+                The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy
               </a>
             </h4>
             <p class="article-description">
-              As economic challenges and cultural anxieties grow, traditional political loyalties in working class communities are shifting – and the consequences are reshaping British politics.
+              The UK is introducing digital IDs to crack down on illegal work and strengthen borders. Prime Minister Sir Keir Starmer called them “an enormous opportunity for the UK,” while Cabinet Office Minister Lisa Nandy said they would make a “significant dent” in illegal employment and protect lawful workers. 
             </p>
-            <span class="meta">DATE · Politics & Economics · 5 min read</span>
+            <span class="meta">25/10/2025 · Politics & Economics · 5 min read</span>
           </div>
         </div>
          <!-- Add more .article-card blocks here -->
@@ -77,4 +76,5 @@
 </body>
 
 </html>
+
 
