--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Civic Economica | What Happened. Why It Matters. Fortnightly.</title>
+  <title>TITLE</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <div class="logo-title">
-      <img src="CivicEconomicaLogo.png" alt="Civic Economica logo" class="site-logo" />
-      <div class="title-tagline">
-        <h1>Civic Economica</h1>
-        <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
-      </div>
-    </div>
-
+    <h1>Civic Economica</h1>
+    <p class="tagline">Weekly Political & Economic Insights</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -104,4 +98,5 @@
   </footer>
 </body>
 </html>
+
 
