--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Civic Economica</h1>
-    <p class="tagline">Weekly Political & Economic Insights</p>
+    <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -98,5 +98,6 @@
   </footer>
 </body>
 </html>
+
 
 
