--- a/newsletter.html
+++ b/newsletter.html
@@ -3,16 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Newsletter | Civic Economica</title>
+  <title>TITLE</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-    <div class="title-tagline">
-      <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
-    </div>
-  </div>
+  <header>
+    <h1>Civic Economica</h1>
+    <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -43,5 +40,6 @@
 </body>
 
 </html>
+
 
 
