--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Civic Economica</title>
+  <title>TITLE</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <div class="title-tagline">
-      <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters. Fortnightly</p>
-    </div>
-  </div>
+    <h1>Civic Economica</h1>
+    <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,6 +20,7 @@
       </ul>
     </nav>
   </header>
+
 
   <main>
     <section class="contact">
@@ -84,5 +81,6 @@
 </body>
 
 </html>
+
 
 
