--- a/articles.html
+++ b/articles.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Articles | Civic Economica</title>
+  <title>TITLE</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-   <header>
-  <div class="logo-title">
-    <div class="title-tagline">
-      <h1>Civic Economica</h1>
-      <p class="tagline">What Happened. Why It Matters. Fortnightly</p>
-    </div>
-  </div>
+  <header>
+    <h1>Civic Economica</h1>
+    <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -24,7 +20,7 @@
       </ul>
     </nav>
   </header>
-      
+
   <main>
         <section class="search-section">
             <input type="text" id="searchInput" placeholder="Search articles..." />
@@ -75,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
