--- a/The_Digital_Border_Within.html
+++ b/The_Digital_Border_Within.html
@@ -38,7 +38,7 @@
       </p>
 
       <p>
-        The UK’s informal economy, including cash-in-hand and off-the-books work, is estimated to account for 10–13% of GDP or roughly £250 billion a year. This is money circulating through construction, agriculture, care and hospitality sectors already struggling with recruitment. In hospitality, around 63% of London’s workforce are non-UK nationals. The agriculture sector relies on an estimated 45,000–55,000 seasonal workers, most of whom are migrants (. In social care, visa grants to overseas workers have fallen sharply from 34,500 in mid-2023 to around 2,000 by late 2024.
+        The UK’s informal economy, including cash-in-hand and off-the-books work, is estimated to account for 10–13% of GDP or roughly £250 billion a year. This is money circulating through construction, agriculture, care and hospitality sectors already struggling with recruitment. In hospitality, around 63% of London’s workforce are non-UK nationals. The agriculture sector relies on an estimated 45,000–55,000 seasonal workers, most of whom are migrants. In social care, visa grants to overseas workers have fallen sharply from 34,500 in mid-2023 to around 2,000 by late 2024.
       </p>
 
       <p>
