--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'MEASUREMENTID');
+    gtag('config', 'G-8YK502VTQN');
     gtag('config', 'G-XXXXXXXXXX', { 'anonymize_ip': true });
   </script>
 
@@ -98,6 +98,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
