--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <header>
     <h1>Civic Economica</h1>
     <p class="tagline">What Happened. Why It Matters. Fortnightly.</p>
+    <div class="menu-toggle" id="mobile-menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -98,6 +103,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
