--- a/index.html
+++ b/index.html
@@ -101,8 +101,18 @@
   <footer>
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
+  <script>
+  const menuToggle = document.getElementById('mobile-menu');
+  const nav = document.querySelector('nav ul');
+
+  menuToggle.addEventListener('click', () => {
+    nav.classList.toggle('show');
+    menuToggle.classList.toggle('active');
+  });
+</script>
 </body>
 </html>
+
 
 
 
