--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TITLE</title>
+  <title>Home</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -112,6 +112,7 @@
 </script>
 </body>
 </html>
+
 
 
 
