--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TITLE</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -81,6 +81,7 @@
 </body>
 
 </html>
+
 
 
 
