--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TITLE</title>
+  <title>About</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -67,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
