--- a/The_Digital_Border_Within.html
+++ b/The_Digital_Border_Within.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TITLE</title>
+  <title>The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy </title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
