--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
         </p>
         <a class="cta-button" href="articles.html">Read the Latest Articles</a>
       </section>
-
+      
+    <main class="homepage">
+      <section class="intro">
       <section class="highlight-article">
-        <p>
-
-
-          
-        </p>
         <h3>Latest Feature</h3>
         <div class="article-content">
           <h4>
@@ -58,6 +55,8 @@
         </div>
       </section>
 
+      <main class="homepage">
+      <section class="intro">
       <section class="about-snippet">
         <h3>What is Civic Economica?</h3>
         <p>
@@ -117,6 +116,7 @@
 </script>
 </body>
 </html>
+
 
 
 
