--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
       <section class="highlight-article">
         <h2>Latest Feature</h2>
         <div class="article-content">
-          <h4>
-            <a href="The_Digital_Border_Within.html">
-              The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy
-            </a>
-          </h4>
+          <h4><a href="The_Digital_Border_Within.html"> The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy</a></h4>
           <p>
             The UK is introducing digital IDs to crack down on illegal work and strengthen borders. Prime Minister Sir Keir Starmer called them “an enormous opportunity for the UK,” while Cabinet Office Minister Lisa Nandy said they would make a “significant dent” in illegal employment and protect lawful workers.
           </p>
@@ -54,7 +50,7 @@
         </div>
       </section>
       
-        <section class="about-snippet">
+      <section class="about-snippet">
           <h3>What is Civic Economica?</h3>
         <p>
           Civic Economica is a personal project dedicated to unpacking complex economic and political topics in a clear, original, and accessible way. It is updated fortnightly and crafted for readers who seek depth without unnecessary jargon.
@@ -113,6 +109,7 @@
 </script>
 </body>
 </html>
+
 
 
 
