--- a/ATransatlanticGreenWave.html
+++ b/ATransatlanticGreenWave.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy </title>
+  <title>A Transatlantic Green Wave: How Mamdani’s New York Victory Could Reshape UK Politics</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -26,27 +26,29 @@
       <div class="featured-image">
 
       </div>
-      <h2 class="headline">The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy</h2>
-      <p class="article-meta">By Ellie Nenguke · 07/11/2025 · Politics & Economics· <span class="reading-time"> 5 min read</span></p>
+      <h2 class="headline">A Transatlantic Green Wave: How Mamdani’s New York Victory Could Reshape UK Politics</h2>
+      <p class="article-meta">By Ellie Nenguke · 21/11/2025 · Politics & Economics· <span class="reading-time"> 5 min read</span></p>
 
       <p class="intro">
-        The UK is introducing digital IDs to crack down on illegal work and strengthen borders. Prime Minister Sir Keir Starmer called them “an enormous opportunity for the UK,” while Cabinet Office Minister Lisa Nandy said they would make a “significant dent” in illegal employment and protect lawful workers.
+        Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has been described as a breakthrough for progressive politics. Analysts point to his focus on housing, climate justice, and economic redistribution as a blueprint for left-leaning parties internationally. In the UK, the Green Party, under the leadership of Zack Polanski, is drawing attention as it experiences a surge in both membership and public support.
       </p>
 
       <p>
-       From 2025, digital identity verification will become a central feature of the UK’s immigration and labour policy. The Home Office has intensified its crackdown on illegal working, conducting over 9,000 enforcement visits and making 6,410 arrests between July 2024 and May 2025, a 51% increase on the previous year. Digital IDs are being positioned as the next step, allowing employers to instantly confirm a worker’s right to work through secure online checks. The aim is clear: to make illegal employment impossible. Yet while the policy appears straightforward, its practical and social consequences are more complex.
+       Since Polanski became leader in early September 2025, the Green Party’s membership has more than doubled, passing 100,000 by mid-October and reportedly reaching 126,000 by late October. (greenparty.org.uk
+) This surge has strengthened the party’s grassroots presence, particularly among young urban voters, and is seen as a sign that progressive, redistributive politics are gaining traction in Britain.
       </p>
 
       <p>
-        The UK’s informal economy, including cash-in-hand and off-the-books work, is estimated to account for 10–13% of GDP or roughly £250 billion a year. This is money circulating through construction, agriculture, care and hospitality sectors already struggling with recruitment. In hospitality, around 63% of London’s workforce are non-UK nationals. The agriculture sector relies on an estimated 45,000–55,000 seasonal workers, most of whom are migrants. In social care, visa grants to overseas workers have fallen sharply from 34,500 in mid-2023 to around 2,000 by late 2024.
+       Mamdani’s platform in New York, which included freezing rent for over a million tenants, taxing the wealthiest residents, expanding public services like free childcare and fare-free buses, and investing in environmental initiatives, bears notable resemblance to the Green Party’s policy agenda. Polanski has advocated for national rent controls, expanded social housing, wealth taxes on the richest, and greater public ownership of utilities, framing climate action as inseparable from economic justice. (newstatesman.com
+)
       </p>
 
       <p>
-        If digital IDs push undocumented workers out of these roles, businesses may face labour shortages, higher costs and slower output. This could drive inflation in food, hospitality and care services, costs that ultimately fall on consumers. The informal economy has long acted as a buffer for industries facing recruitment difficulties, and limiting that flexibility risks destabilising sectors that already operate under tight margins.
+       The appeal to younger voters has been central to both Mamdani and Polanski. Mamdani leveraged TikTok, Instagram Reels, and livestream Q&As to engage under-35s in New York, while Polanski has used social media to explain policy in relatable terms, emphasising everyday issues like rent, energy bills, and climate change. Membership data indicates this strategy is effective, with a large portion of new Green members drawn from younger demographics.
       </p>
         
       <p>
-        Support for the reforms comes from several Labour MPs and business groups. Jake Richards, MP for Rother Valley, leads a cross-party group of over forty Labour MPs who argue that digital IDs could “drive huge gains in public sector productivity and make it harder for those entering the country illegally to access work or public services.” Neil Carberry, Chief Executive of the Recruitment & Employment Confederation, said the policy could “simplify hiring and create a more fluent and dynamic job market.” Ben Willmott, Head of Public Policy at the CIPD, agreed that a streamlined verification system would reduce bureaucracy for employers and strengthen workplace protections.
+      Support for these progressive policies comes from the perspective that inequality, housing pressures, and climate risks are interconnected. Analysts argue that Mamdani’s win provides the Greens with a proof point that bold redistributive platforms can resonate with voters. The party’s surge in membership and rising polls suggest they are now positioned to challenge the mainstream political narrative and push for policies that address the cost-of-living crisis alongside environmental concerns.
       </p>
 
       <p>
@@ -58,13 +60,13 @@
       </p>
 
       <p>
-        This reliance on digital access risks excluding those who are already marginalised, particularly in sectors such as care and hospitality where low-wage roles are often filled by older or economically disadvantaged workers. Employment could become more about digital literacy than legal entitlement, creating barriers for people who are otherwise eligible to work.
+       Yet experts caution that translating enthusiasm into electoral success is challenging. Dr. Emily Barker, political scientist at King’s College London, notes that “membership and polling gains are promising, but the Greens must now convert enthusiasm into turnout. The first-past-the-post system penalises dispersed support.” Rapid growth also creates organisational pressures, with local branches needing to manage increased numbers while scaling up canvassing, fundraising, and campaign infrastructure.
       </p>
 
       <p>
-        Smaller businesses may struggle to implement digital verification effectively. While larger organisations can adapt more easily, smaller employers often operate on narrow profit margins and lack technical capacity, making compliance costly. Additional burdens could unintentionally push some work further underground, undermining the policy’s own goals.
+        The broader implications for UK politics are significant. Mamdani’s New York victory signals that progressive, redistributive, and climate-conscious policies can win in major urban centres. For the Greens, this moment offers an opportunity to consolidate membership gains, mobilise young voters, and push mainstream parties to respond to issues of inequality and environmental justice. Whether this translates into lasting political power will depend on the Greens’ ability to institutionalise growth, effectively target electoral constituencies, and maintain momentum.
       </p>
 
       <p>
-       As the UK moves toward a digital-first verification system, the balance between efficiency, security and social equity will be critical. Digital IDs promise transparency and stronger borders, but they also risk deepening inequalities and placing pressure on sectors that already face labour shortages. In pursuing a cleaner, more traceable economy, the government must ensure that those who keep Britain running are not left behind. The success of digital IDs will depend not just on technology, but on policies that support inclusion and mitigate unintended economic and social consequences. 
+       As both the United States and the United Kingdom confront rising inequality, climate pressures, and generational divides, the political parallel between Mamdani’s New York and Polanski’s Green Party suggests a potential shift in what is electorally achievable. Bold policies, youth engagement, and grassroots mobilisation may now define the contours of a new left-wing political landscape. 
       </p>
