--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <section class="highlight-article">
         <h2>Latest Feature</h2>
         <div class="article-content">
-          <h4><a href="The_Digital_Border_Within.html"> The Digital Border Within: How the UK’s Digital IDs Could Reshape the Shadow Economy</a></h4>
+          <h4><a href="ATransatlanticGreenWave.html"> A Transatlantic Green Wave: How Mamdani’s New York Victory Could Reshape UK Politics</a></h4>
           <p>
-            The UK is introducing digital IDs to crack down on illegal work and strengthen borders. Prime Minister Sir Keir Starmer called them “an enormous opportunity for the UK,” while Cabinet Office Minister Lisa Nandy said they would make a “significant dent” in illegal employment and protect lawful workers.
+            Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has already been called a watershed moment for progressive urban politics. The win is generating significant interest in the UK, where the Green Party, under the leadership of Zack Polanski, is experiencing an unprecedented surge in membership and polling.
           </p>
-          <span class="meta">07/11/2025 · Politics & Economics · 5 min read</span>
+          <span class="meta">21/11/2025 · Politics & Global Affairs · 5 min read</span>
         </div>
       </section>
       
@@ -109,6 +109,7 @@
 </script>
 </body>
 </html>
+
 
 
 
