--- a/articles.html
+++ b/articles.html
@@ -40,6 +40,20 @@
             <span class="meta">07/11/2025 · Politics & Economics · 5 min read</span>
           </div>
         </div>
+         <div class="article-card">
+          <div class="article-content">
+            <h4 class="article-title">
+              <a href="ATransatlanticGreenWave.html">
+                A Transatlantic Green Wave: How Mamdani’s New York Victory Could Reshape UK Politics
+              </a>
+            </h4>
+            <p class="article-description">
+              Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has been described as a breakthrough for progressive politics. Analysts point to his focus on housing, climate justice, and economic redistribution as a blueprint for left-leaning parties internationally. In the UK, the Green Party, under the leadership of Zack Polanski, is drawing attention as it experiences a surge in both membership and public support. 
+            </p>
+            <span class="meta">07/11/2025 · Politics & Global Affairs · 5 min read</span>
+          </div>
+        </div>
+            
          <!-- Add more .article-card blocks here -->
       </section>
   </main>
@@ -71,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
