--- a/ATransatlanticGreenWave.html
+++ b/ATransatlanticGreenWave.html
@@ -27,7 +27,7 @@
 
       </div>
       <h2 class="headline">A Transatlantic Green Wave: How Mamdani’s New York Victory Could Reshape UK Politics</h2>
-      <p class="article-meta">By Ellie Nenguke · 21/11/2025 · Politics & Economics· <span class="reading-time"> 5 min read</span></p>
+      <p class="article-meta">By Ellie Nenguke · 21/11/2025 · Politics & Global Affairs· <span class="reading-time"> 5 min read</span></p>
 
       <p class="intro">
         Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has been described as a breakthrough for progressive politics. Analysts point to his focus on housing, climate justice, and economic redistribution as a blueprint for left-leaning parties internationally. In the UK, the Green Party, under the leadership of Zack Polanski, is drawing attention as it experiences a surge in both membership and public support.
