--- a/ATransatlanticGreenWave.html
+++ b/ATransatlanticGreenWave.html
@@ -30,33 +30,31 @@
       <p class="article-meta">By Ellie Nenguke · 21/11/2025 · Politics & Global Affairs· <span class="reading-time"> 5 min read</span></p>
 
       <p class="intro">
-        Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has been described as a breakthrough for progressive politics. Analysts point to his focus on housing, climate justice, and economic redistribution as a blueprint for left-leaning parties internationally. In the UK, the Green Party, under the leadership of Zack Polanski, is drawing attention as it experiences a surge in both membership and public support.
+        Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has been described as a breakthrough for progressive politics. Analysts point to his focus on housing, climate justice and economic redistribution as a blueprint for left-leaning parties internationally. In the UK, the Green Party, under the leadership of Zack Polanski, is drawing attention as it experiences a surge in both membership and public support.
       </p>
 
       <p>
-       Since Polanski became leader in early September 2025, the Green Party’s membership has more than doubled, passing 100,000 by mid-October and reportedly reaching 126,000 by late October. (greenparty.org.uk
-) This surge has strengthened the party’s grassroots presence, particularly among young urban voters, and is seen as a sign that progressive, redistributive politics are gaining traction in Britain.
+       Since Polanski became leader in early September 2025, the Green Party’s membership has more than doubled, passing 100,000 by mid-October and reportedly reaching 126,000 by late October (greenparty.org.uk). This surge has strengthened the party’s grassroots presence, particularly among young urban voter and is seen as a sign that progressive, redistributive politics are gaining traction in Britain.
       </p>
 
       <p>
-       Mamdani’s platform in New York, which included freezing rent for over a million tenants, taxing the wealthiest residents, expanding public services like free childcare and fare-free buses, and investing in environmental initiatives, bears notable resemblance to the Green Party’s policy agenda. Polanski has advocated for national rent controls, expanded social housing, wealth taxes on the richest, and greater public ownership of utilities, framing climate action as inseparable from economic justice. (newstatesman.com
-)
+       Mamdani’s platform in New York, which included freezing rent for over a million tenants, taxing the wealthiest residents, expanding public services like free childcare and fare-free buses and investing in environmental initiatives, bears notable resemblance to the Green Party’s policy agenda. Polanski has advocated for national rent controls, expanded social housing, wealth taxes on the richest, and greater public ownership of utilities, framing climate action as inseparable from economic justice. (newstatesman.com)
       </p>
 
       <p>
-       The appeal to younger voters has been central to both Mamdani and Polanski. Mamdani leveraged TikTok, Instagram Reels, and livestream Q&As to engage under-35s in New York, while Polanski has used social media to explain policy in relatable terms, emphasising everyday issues like rent, energy bills, and climate change. Membership data indicates this strategy is effective, with a large portion of new Green members drawn from younger demographics.
+       The appeal to younger voters has been central to both Mamdani and Polanski. Mamdani leveraged TikTok, Instagram Reels and livestream Q&As to engage under-35s in New York, while Polanski has used social media to explain policy in relatable terms, emphasising everyday issues like rent, energy bills and climate change. Membership data indicates this strategy is effective, with a large portion of new Green members drawn from younger demographics.
       </p>
         
       <p>
-      Support for these progressive policies comes from the perspective that inequality, housing pressures, and climate risks are interconnected. Analysts argue that Mamdani’s win provides the Greens with a proof point that bold redistributive platforms can resonate with voters. The party’s surge in membership and rising polls suggest they are now positioned to challenge the mainstream political narrative and push for policies that address the cost-of-living crisis alongside environmental concerns.
+      Support for these progressive policies comes from the perspective that inequality, housing pressures and climate risks are interconnected. Analysts argue that Mamdani’s win provides the Greens with a proof point that bold redistributive platforms can resonate with voters. The party’s surge in membership and rising polls suggest they are now positioned to challenge the mainstream political narrative and push for policies that address the cost-of-living crisis alongside environmental concerns.
       </p>
 
       <p>
-       Yet experts caution that translating enthusiasm into electoral success is challenging. Dr. Emily Barker, political scientist at King’s College London, notes that “membership and polling gains are promising, but the Greens must now convert enthusiasm into turnout. The first-past-the-post system penalises dispersed support.” Rapid growth also creates organisational pressures, with local branches needing to manage increased numbers while scaling up canvassing, fundraising, and campaign infrastructure.
+       Yet experts caution that translating enthusiasm into electoral success is challenging. Dr. Emily Barker, political scientist at King’s College London, notes that “membership and polling gains are promising, but the Greens must now convert enthusiasm into turnout. The first-past-the-post system penalises dispersed support.” Rapid growth also creates organisational pressures, with local branches needing to manage increased numbers while scaling up canvassing, fundraising and campaign infrastructure.
       </p>
 
       <p>
-        The broader implications for UK politics are significant. Mamdani’s New York victory signals that progressive, redistributive, and climate-conscious policies can win in major urban centres. For the Greens, this moment offers an opportunity to consolidate membership gains, mobilise young voters, and push mainstream parties to respond to issues of inequality and environmental justice. Whether this translates into lasting political power will depend on the Greens’ ability to institutionalise growth, effectively target electoral constituencies, and maintain momentum.
+        The broader implications for UK politics are significant. Mamdani’s New York victory signals that progressive, redistributive and climate-conscious policies can win in major urban centres. For the Greens, this moment offers an opportunity to consolidate membership gains, mobilise young voters and push mainstream parties to respond to issues of inequality and environmental justice. Whether this translates into lasting political power will depend on the Greens’ ability to institutionalise growth, effectively target electoral constituencies and maintain momentum.
       </p>
 
       <p>
