--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="article-content">
           <h4><a href="ATransatlanticGreenWave.html"> A Transatlantic Green Wave: How Mamdani’s New York Victory Could Reshape UK Politics</a></h4>
           <p>
-            Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has already been called a watershed moment for progressive urban politics. The win is generating significant interest in the UK, where the Green Party, under the leadership of Zack Polanski, is experiencing an unprecedented surge in membership and polling.
+            Zohran Mamdani’s electoral win for Mayor of New York City on 5 November 2025 has been described as a breakthrough for progressive politics. Analysts point to his focus on housing, climate justice and economic redistribution as a blueprint for left-leaning parties internationally. In the UK, the Green Party, under the leadership of Zack Polanski, is drawing attention as it experiences a surge in both membership and public support.
           </p>
           <span class="meta">21/11/2025 · Politics & Global Affairs · 5 min read</span>
         </div>
@@ -75,7 +75,7 @@
   <!-- Support section -->
   <section class="support">
     <h3>Support My Writing</h3>
-    <p>Support my writing and help me travel, meet people, and conduct interviews to enrich future articles.</p>
+    <p>Support my writing and help me travel, meet people and conduct interviews to enrich future articles.</p>
     <a href="https://coff.ee/civiceconomica" target="_blank">
       <img
         src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png"
@@ -109,6 +109,7 @@
 </script>
 </body>
 </html>
+
 
 
 
