--- a/newsletter.html
+++ b/newsletter.html
@@ -42,9 +42,19 @@
   <footer>
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YK502VTQN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8YK502VTQN');
+</script>
 </body>
 
 </html>
+
 
 
 
